# reviewflow

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: database.py  exceptions.py  main.py
backend/app/api/: draft_comments.py  gitlab_instances.py  gitlab_users.py  repositories.py  review_sessions.py
backend/app/models/: draft_comment.py  gitlab_instance.py  gitlab_user.py  repository.py  review_session.py
backend/app/services/: draft_comment_service.py  gitlab_instance_service.py  gitlab_user_service.py  repository_service.py  review_session_service.py
backend/migrations/: 001_initial.sql  002_draft_comments.sql  003_review_sessions.sql  004_gitlab_users.sql
branding/: brand-guidelines.md  color-palette.md  typography.md
docs/: marketplace.md  prd.md
docs/adrs/: 0001-python-backend.md  0002-cursor-extension.md  0003-sqlite-local-persistence.md  0004-git-provider-abstraction.md  0005-gitlab-instance-abstraction.md  0006-local-review-storage.md  0007-plugin-architecture.md  README.md
extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
extension/media/composer/: composer.css  composer.js
extension/scripts/: stage-backend.mjs  unstage-backend.mjs
extension/src/: extension.ts  onboarding.ts
extension/src/ai/: aiReviewProvider.ts  anthropicProvider.ts  cursorLmService.ts
extension/src/api/: backendClient.ts
extension/src/backend/: backendManager.ts
extension/src/commands/: acceptAiSuggestion.ts  activateReviewSession.ts  addDraftComment.ts  addRepository.ts  (+16 more)
(+15 files in other folders)
